--- a/experiment1/index.html
+++ b/experiment1/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- This title is used for tabs and bookmarks -->
-	<title>Experiment X - Subject/Topic</title>
+	<title>Experiment 01: Getting Started</title>
 
 	<!-- Use UTF character set, a good idea with any webpage -->
 	<meta charset="UTF-8" />
@@ -24,42 +24,50 @@
     <script type="text/javascript" src="../js/site.js" DEFER></script>
 	<!-- Use me for a JavaScript OOP Project -->
 	<script type="text/javascript" src="./js/project.js" DEFER></script>
-	<!-- Use me for a p5.js project -->
-	<script type="text/javascript" src="./js/sketch.js" DEFER></script>
 </head>
-<body>
+<body style = "background: #ffa4a4">
 	<!-- Style this page by changing the CSS in ../css/site.css or css/experiment.css -->
-	<main id="content">
+	<main id="content" style = "color: #ff3030; border:none">
 		<section>
 
-			<h1>Experiment X - Subject/Topic</h1>
+			<h1>Experiment 01: Getting Started</h1>
 
-			<div class="minor-section">
-				<div id="canvas-container">
-					<!-- canvas will be added here -->
-				</div>
+			<div class="minor-section" style = "background: #000">
+				<body>
+					<button 
+					  style="font-family: Verdana; color: #fff; margin: 1em; background:  #494949"
+					  id="clicker"
+					  > new star war </button>
+					<div
+					  style="font-family: Verdana ; color: #43A5CF; margin: 1em; background: #000;"
+						 > A long time ago in a galaxy far, far away... </div>
+					<div
+					  style="font-family: Verdana; color: #FFE81F; padding: 1em; margin: 1em; background: #000;"
+					  id="box"
+					></div>
+				  </body>
                 <div class="fullscreen-box">
-                    <button id="fullscreen">Fullscreen</button>
+                    <button id="fullscreen" style="font-family: Verdana; margin: 1em;">Fullscreen</button>
                 </div>
 			</div>
 
-			<div class="minor-section">
+			<div class="minor-section" style="font-family: Verdana; color: #fff; margin: 1em; background:  #ff7070; border: none">
 				<h2>Description</h2>
 				<p>What are you trying to acomplish with this experiment?</p>
 			</div>
 
-			<div class="minor-section">
+			<div class="minor-section"  style="font-family: Verdana; color: #fff; margin: 1em; background:  #ff7070; border: none">
 				<h2>Technical</h2>
 				<p>Describe in detail what you did technically and how it works?</p>
 			</div>
 
-			<div class="minor-section">
+			<div class="minor-section"  style="font-family: Verdana; color: #fff; margin: 1em; background:  #ff7070; border: none">
 				<h2>Reflection</h2>
 				<p>Each person that worked on the code should reflect on the process, the difficulties, and the successes of the experiment.</p>
 			</div>
 
 		</section>
-		<nav id="links" class="minor-section">
+		<nav id="links" class="minor-section"  style="font-family: Verdana; color: #000000; margin: 1em; background:  #ffc7c7; border: none">
 			<!-- Put link back to homepage here. -->
             <ul>
                 <li><a href="../index.html">Home</a></li>
