generate new scrolls + pause/restart

--- a/experiment1/index.html
+++ b/experiment1/index.html
@@ -40,6 +40,16 @@
 					  id="clicker" > 
 					  new star war 
 				</button>
+				<button 
+					  style="font-family: Verdana; color: #fff; margin: 1em; background:  #494949"
+					  id="pauser" > 
+					  ⏸️ 
+				</button>
+				<button 
+					  style="font-family: Verdana; color: #fff; margin: 1em; background:  #494949"
+					  id="restarter" > 
+					  🔄 
+				</button>
 				<div style="font-family: Verdana ; color: #43A5CF; margin: 1em; background: #000;" > 
 					A long time ago in a galaxy far, far away... 
 				</div>
