forgot one thing!

--- a/experiment1/index.html
+++ b/experiment1/index.html
@@ -122,7 +122,7 @@
 					the generator might switch to "blueprints" or "schematics").
 				</p>
 				<p>
-					Lastly, I'd like to add a star field and some film grain to get this thing Star Wars-maxxed. 
+					Lastly, I'd like to add a star field, film grain, and (generative?) music to get this thing Star Wars-maxxed. 
 				</p>
 			</div>
 		</section>
