actually works now (no resize tho)

--- a/experiment2/index.html
+++ b/experiment2/index.html
@@ -38,9 +38,14 @@
 				<div id="canvas-container">
 					<!-- canvas will be added here -->
 				</div>
-                <div class="fullscreen-box">
+                <!--- <div class="fullscreen-box">
                     <button id="fullscreen">Fullscreen</button>
-                </div>
+                </div> --->
+				<button 
+					  style="font-family: Verdana; color: #000000; margin: 1em; background:  #929292"
+					  id="reimagine" > 
+					  reimagine 
+				</button>
 			</div>
 
 			<div class="minor-section">
