--- a/experiment2/index.html
+++ b/experiment2/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- This title is used for tabs and bookmarks -->
-	<title>Experiment X - Subject/Topic</title>
+	<title>Experiment 2 - Wetlands through the Window</title>
 
 	<!-- Use UTF character set, a good idea with any webpage -->
 	<meta charset="UTF-8" />
@@ -29,12 +29,12 @@
 </head>
 <body>
 	<!-- Style this page by changing the CSS in ../css/site.css or css/experiment.css -->
-	<main id="content">
+	<main id="content" style = "border:none">
 		<section>
 
-			<h1>Experiment X - Subject/Topic</h1>
+			<h1 style="font-family: Calibri; font-weight: 900;">Experiment 2 - Wetlands through the Window</h1>
 
-			<div class="minor-section">
+			<div class="minor-section" style="font-family: Calibri; color: #fff; margin: 1em; background:#ffae00; border: none">
 				<div id="canvas-container">
 					<!-- canvas will be added here -->
 				</div>
@@ -42,23 +42,23 @@
                     <button id="fullscreen">Fullscreen</button>
                 </div> --->
 				<button 
-					  style="font-family: Verdana; color: #000000; margin: 1em; background:  #929292"
+					  style="font-family: Verdana; color: #ad7600; margin: 1em; border-color: #ffae00; background:  #ffd67d"
 					  id="reimagine" > 
 					  reimagine 
 				</button>
 			</div>
 
-			<div class="minor-section">
+			<div class="minor-section" style="font-family: Calibri; color: #fff; margin: 1em; background:  #ffae00; border: none">
 				<h2>Description</h2>
 				<p>What are you trying to acomplish with this experiment?</p>
 			</div>
 
-			<div class="minor-section">
+			<div class="minor-section" style="font-family: Calibri; color: #fff; margin: 1em; background:  #ffae00; border: none">
 				<h2>Technical</h2>
 				<p>Describe in detail what you did technically and how it works?</p>
 			</div>
 
-			<div class="minor-section">
+			<div class="minor-section" style="font-family: Calibri; color: #fff; margin: 1em; background:  #ffae00; border: none">
 				<h2>Reflection</h2>
 				<p>Each person that worked on the code should reflect on the process, the difficulties, and the successes of the experiment.</p>
 			</div>
