--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <h2>Links to Experiments</h2>
                 <ul>
                     <li><a href="./experiment1/index.html">Experiment 1: Grammars-based Star Wars Crawler</a></li>
-                    <li><a href="./experiment2/index.html">Experiment 2</a></li>
+                    <li><a href="./experiment2/index.html">Experiment 2 - Wetlands through the Window</a></li>
                     <li><a href="./experiment3/index.html">Experiment 3</a></li>
                 </ul>
             </div>
