--- a/experiment3/index.html
+++ b/experiment3/index.html
@@ -23,9 +23,11 @@
 	<!-- Link to javascript files - DEFER waits until all elements are rendered -->
     <script type="text/javascript" src="../js/site.js" DEFER></script>
 	<!-- Use me for a JavaScript OOP Project -->
-	<script type="text/javascript" src="./js/project.js" DEFER></script>
+	<!-- <script type="text/javascript" src="./js/project.js" DEFER></script> -->
 	<!-- Use me for a p5.js project -->
+	<script type="text/javascript" src="./js/globals.js" DEFER></script>
 	<script type="text/javascript" src="./js/bsp.js" DEFER></script>
+	<script type="text/javascript" src="./js/perlin.js" DEFER></script>
 	<script type="text/javascript" src="./js/generator.js" DEFER></script>
 	<script type="text/javascript" src="./js/sketch.js" DEFER></script>
 </head>
