overworld/dungeon toggle button addded

--- a/experiment3/index.html
+++ b/experiment3/index.html
@@ -41,6 +41,7 @@
 			<div class="minor-section">
 				<button id="reseedButton"> reseed</button>
 				<span id="seedReport"></span>
+				<button id="worldSwitch"> overworld</button>
 				<div id="canvas-container">
 					<!-- canvas will be added here -->
 				</div>
