--- a/experiment3/index.html
+++ b/experiment3/index.html
@@ -28,6 +28,7 @@
 	<script type="text/javascript" src="./js/globals.js" DEFER></script>
 	<script type="text/javascript" src="./js/bsp.js" DEFER></script>
 	<script type="text/javascript" src="./js/perlin.js" DEFER></script>
+	<script type="text/javascript" src="./js/floodfill.js" DEFER></script>
 	<script type="text/javascript" src="./js/generator.js" DEFER></script>
 	<script type="text/javascript" src="./js/sketch.js" DEFER></script>
 </head>
@@ -55,17 +56,18 @@
 
 			<div class="minor-section">
 				<h2>Description</h2>
-				<p>What are you trying to acomplish with this experiment?</p>
+				<p><a href="https://thkaspar.itch.io/micro-tileset-overworld-dungeon"> Tileset - Overworld & Dungeon</a> by thkaspar</p>
 			</div>
 
 			<div class="minor-section">
 				<h2>Technical</h2>
-				<p>Describe in detail what you did technically and how it works?</p>
+				<p>Dungeons: binary space partioning; overworld: perlin noise </p>
 			</div>
 
 			<div class="minor-section">
 				<h2>Reflection</h2>
-				<p>Each person that worked on the code should reflect on the process, the difficulties, and the successes of the experiment.</p>
+				<p> In the future, I’d like to add decor items using lazy flood fill generated biomes in the overworld, and I’d like to make the dungeons more interesting. I am happy with the data structure that I used to control each world’s generate, though, and I think it will make future iterations simpler.
+				</p>
 			</div>
 
 		</section>
