fixed hash and updated display message

--- a/experiment4b/index.html
+++ b/experiment4b/index.html
@@ -23,7 +23,7 @@
 	<!-- other librarires-->
 	<script src="https://cdn.jsdelivr.net/npm/d3-delaunay@6" defer></script>   
     <script src="https://cdn.jsdelivr.net/npm/d3-polygon@3" defer></script>
-    <script src="/xxhash.min.js" defer></script>
+    <script src="./js/xxhash.min.js" defer></script>
 
 
 	<!-- Link to javascript files - DEFER waits until all elements are rendered -->
