--- a/experiment4c/index.html
+++ b/experiment4c/index.html
@@ -19,6 +19,8 @@
         crossorigin="anonymous"></script>
 	<!-- Load p5.js library -->
 	<script src="https://cdn.jsdelivr.net/npm/p5@1.9.2/lib/p5.js"></script>
+    <script src="./js/xxhash.min.js" defer></script>
+
 
 	<!-- Link to javascript files - DEFER waits until all elements are rendered -->
     <script type="text/javascript" src="../js/site.js" DEFER></script>
@@ -41,11 +43,8 @@
                 <!--- <div class="fullscreen-box">
                     <button id="fullscreen">Fullscreen</button>
                 </div> --->
-				<button 
-					  style="font-family: Verdana; color: #ad7600; margin: 1em; border-color: #ffae00; background:  #ffd67d"
-					  id="reimagine" > 
-					  reimagine 
-				</button>
+				<div id = "input"> </div>
+				
 			</div>
 
 			<div class="minor-section" style="font-family: Calibri; color: #fff; margin: 1em; background:  #ffae00; border: none">
