noise settings sliders

--- a/experiment4c/index.html
+++ b/experiment4c/index.html
@@ -44,6 +44,7 @@
                     <button id="fullscreen">Fullscreen</button>
                 </div> --->
 				<div id = "input"> </div>
+				<div id = "sliders"> </div>
 				
 			</div>
 
