update portfolio links

--- a/experiment4a/index.html
+++ b/experiment4a/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- This title is used for tabs and bookmarks -->
-	<title>Experiment X - Subject/Topic</title>
+	<title>Experiment 4a</title>
 
 	<!-- Use UTF character set, a good idea with any webpage -->
 	<meta charset="UTF-8" />
@@ -33,7 +33,7 @@
 	<main id="content">
 		<section>
 
-			<h1>Experiment X - Subject/Topic</h1>
+			<h1>Experiment 4a</h1>
 
 			<div class="minor-section">
 				<div id="canvas-container">
@@ -46,7 +46,8 @@
 
 			<div class="minor-section">
 				<h2>Description</h2>
-				<p>What are you trying to acomplish with this experiment?</p>
+				<p><li><a href="https://paperpluto.itch.io/shore-things-pack">Assets used</a></li></p>
+				<p><li><a href="https://docs.google.com/document/d/1jJyUUgu7i7M-MbGBUqWZAs4XqSVeu5V41z__K3wWoyk/edit?usp=sharing">Notes</a></li></p>
 			</div>
 
 			<div class="minor-section">
