--- a/experiment4b/index.html
+++ b/experiment4b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- This title is used for tabs and bookmarks -->
-	<title>Experiment X - Subject/Topic</title>
+	<title>Experiment 4b</title>
 
 	<!-- Use UTF character set, a good idea with any webpage -->
 	<meta charset="UTF-8" />
@@ -38,7 +38,7 @@
 	<main id="content">
 		<section>
 
-			<h1>Experiment X - Subject/Topic</h1>
+			<h1>Experiment 4b</h1>
 
 			<div class="minor-section">
 				<div id="canvas-container">
@@ -52,6 +52,7 @@
 			<div class="minor-section">
 				<h2>Description</h2>
 				<p>What are you trying to acomplish with this experiment?</p>
+				<p><li><a href="https://docs.google.com/document/d/1jJyUUgu7i7M-MbGBUqWZAs4XqSVeu5V41z__K3wWoyk/edit?usp=sharing">Notes</a></li></p>
 			</div>
 
 			<div class="minor-section">
