update webpage writeups

--- a/experiment4a/index.html
+++ b/experiment4a/index.html
@@ -46,19 +46,26 @@
 
 			<div class="minor-section">
 				<h2>Description</h2>
+				<p>Partner coded with Jackie Sanchez!</p>
+				<p>We set out to make a sketch inspired by a coral reef/ocean floor.</p>
 				<p><li><a href="https://paperpluto.itch.io/shore-things-pack">Assets used</a></li></p>
 				<p><li><a href="https://docs.google.com/document/d/1jJyUUgu7i7M-MbGBUqWZAs4XqSVeu5V41z__K3wWoyk/edit?usp=sharing">Notes</a></li></p>
+				<div class="picture">
+					<img id="marsh" src="../img/ocean.png" width="100%" height="100%">
+				</div>
 			</div>
 
 			<div class="minor-section">
 				<h2>Technical</h2>
-				<p>Describe in detail what you did technically and how it works?</p>
+				<p>We use noise based on x- and y-positions along with frameCount as a third dimension to give an idle wavey animation.</p>
+				<p>Reference for using noise with hashed seeds: <li><a href="https://wmodes.github.io/cmpm147/experiment4/index.html">Infinite worlds</a></li> by Wes Modes</p>
 			</div>
-
+			<!--
 			<div class="minor-section">
 				<h2>Reflection</h2>
 				<p>Each person that worked on the code should reflect on the process, the difficulties, and the successes of the experiment.</p>
 			</div>
+			-->
 
 		</section>
 		<nav id="links" class="minor-section">
