--- a/experiment4c/index.html
+++ b/experiment4c/index.html
@@ -50,6 +50,7 @@
 
 			<div class="minor-section" style="font-family: Calibri; color: #fff; margin: 1em; background:  #ffae00; border: none">
 				<h2>Description</h2>
+				<p>For this one, I wanted to add some more user interactions to my <li><a href="../experiment2/index.html">scrolling wetlands project</a></li></p>
 				<p><li><a href="https://docs.google.com/document/d/1jJyUUgu7i7M-MbGBUqWZAs4XqSVeu5V41z__K3wWoyk/edit?usp=sharing">Notes</a></li></p>
 				<div class="picture">
 					<img id="marsh" src="../img/marsh.jpg" alt="photo of Suisun marsh" width="20%" height="20%">
@@ -62,11 +63,14 @@
 
 			<div class="minor-section" style="font-family: Calibri; color: #fff; margin: 1em; background:  #ffae00; border: none">
 				<h2>Technical</h2>
+				<p>The user can now change the scroll direction using the left/right arrows and update noise settings using sliders.</p>
+				<p>There's now time-based color lerping on an overlay from a warm tone to a cool tone, to give an impression of time passing and the quality of light changing.</p>
 			</div>
-
+			<!--
 			<div class="minor-section" style="font-family: Calibri; color: #fff; margin: 1em; background:  #ffae00; border: none">
 				<h2>Reflection</h2>
 			</div>
+			-->
 
 		</section>
 		<nav id="links" class="minor-section">
